--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/fa5a92aa23.js" crossorigin="anonymous"></script>
 
     <!-- Update the title to your name -->
-    <title>Itay Nave - Firmware Engineer</title>
+    <title>Itay Nave - Embedded Software Engineer</title>
 
     <!-- Link to your CSS files -->
     <!-- <link rel="stylesheet" type="text/css" href="css/style.css">
