--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <title>Itay Nave - Embedded Software Engineer</title>
 
     <!-- Link to your CSS files -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/solar.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/solar.css"> -->
 </head>
 
 <body>
