--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Link to your CSS files -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/solar.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/solar.css">
 </head>
 
 <body>
