--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,16 @@
     <link rel="shortcut icon" href="/icons/website_logo/NI_Logo_194.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Gloria+Hallelujah&family=Karla:wght@400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Gloria+Hallelujah&family=Karla:wght@400;700&family=Roboto:wght@300;400;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/fa5a92aa23.js" crossorigin="anonymous"></script>
 
     <!-- Update the title to your name -->
-    <title>Itay Nave - Embedded Software Engineer</title>
+    <title>Itay Nave</title>
 
     <!-- Link to your CSS files -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -49,9 +53,48 @@
         </div>
     </header>
 
-    <!-- HOME SECTION -->
-    <!-- Update the home section with your personal branding and professional statement -->
-    <!-- ... -->
+    <!-- ======== HOME SECTION ======== -->
+    <section class="home" id="home">
+        <div class="container">
+            <div class="container-home">
+                <div class="container-upper">
+                    <div class="container-left">
+                        <div class="home-content">
+                            <h2>Hi there!</h2>
+                            <div id="intro-text">I Am a <span class="typing-text">Embedded Software</span><br>Engineer.
+                            </div>
+                            <div class="text">
+
+                                <p>I am passionate about developing cutting-edge solutions using advanced technologies. With my experience, I'm always ready to tackle new challenges in the tech world.</p>
+
+                                <a href="#about" class="btn"><i class="fas fa-user"></i> about me</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="container-right">
+                        <div class="universe">
+                            <div class="solar-system">
+                                <div class="sun"></div>
+                                <div class="planet">
+                                    <div class="moon"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-home-bottom">
+                    <div class="contact-icons">
+                        <a href="mailto:naveitayx@gmail.com"><i class='bx bxl-gmail'></i></a>
+                        <a href="https://github.com/NaveItay" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.linkedin.com/in/inave/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.facebook.com/inave/" target="_blank"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- ABOUT SECTION -->
     <!-- Update the about section with details from your professional background -->
@@ -84,4 +127,5 @@
     <!-- <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/solar_animation.js"></script> -->
 </body>
+
 </html>
