--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                             </div>
                             <div class="text">
 
-                                <p>I am passionate about developing cutting-edge solutions using advanced technologies. With my experience, I'm always ready to tackle new challenges in the tech world.</p>
+                                <p>I am passionate about developing cutting-edge solutions using advanced technologies.
+                                    With my experience,
+                                    I'm always ready to tackle new challenges in the tech world.</p>
 
                                 <a href="#about" class="btn"><i class="fas fa-user"></i> about me</a>
                             </div>
