--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <img src="img/about.png" alt="Itay Nave">
                 </div>
                 <div class="container-right">
-                    <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
+                    <h2>My name is <span class="second-color">"<Itay>" <i class='bx bx-wink-smile'></i></span></h2>
                     <p>Hello! I'm an Embedded/Firmware Software Engineer, specializing in <span
                             class="bold main-color">C, C++</span>, and <span class="bold main-color">Python</span>. With
                         over 6 years of experience, my expertise extends across the entire lifecycle of product
