--- a/index.html
+++ b/index.html
@@ -100,32 +100,24 @@
         </div>
     </section>
 
-    <!-- ======== ABOUT SECTION ======== -->
-    <section class="about" id="about">
-        <div class="container">
-            <h2 class="section__title">About</h2>
-            <div class="container-upper">
-                <div class="container-left">
-                    <img src="img/about.png" alt="Itay Nave">
-                </div>
-                <div class="container-right">
-                    <h2>My name is <span class="second-color">"<Itay>" <i class='bx bx-wink-smile'></i></span></h2>
-                    <p>Hello! I'm an Embedded/Firmware Software Engineer, specializing in <span
-                            class="bold main-color">C, C++</span>, and <span class="bold main-color">Python</span>. With
-                        over 6 years of experience, my expertise extends across the entire lifecycle of product
-                        development, from initial concept and prototyping to mass production.</p>
-                    <p>I am the ideal person to lead a startup, experienced in code architecture and design, handling
-                        complex logics, and intricate state machines.</p>
-                    <p>My forte includes working on <span class="bold main-color">IoT products</span>, motor control,
-                        and closed-loop systems. I am adept at developing smart, low-power systems incorporating sleep
-                        modes for optimal energy efficiency.</p>
-                    <p>I thrive on creating field-independent products that maximize energy efficiency. Let's <span
-                            class="bold second-color">connect <i class='bx bx-chat'></i></span> and explore how we can
-                        drive technological innovation together.</p>
-                </div>
+<!-- ======== ABOUT SECTION ======== -->
+<section class="about" id="about">
+    <div class="container">
+        <h2 class="section__title">About</h2>
+        <div class="container-upper">
+            <div class="container-left">
+                <img src="img/about.png" alt="Itay Nave">
+            </div>
+            <div class="container-right">
+                <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
+                <p>Hello! I'm an Embedded/Firmware Software Engineer, specializing in <span class="bold main-color">C, C++</span>, and <span class="bold main-color">Python</span>. With over 6 years of experience, my expertise extends across the entire lifecycle of product development, from initial concept and prototyping to mass production.</p>
+                <p>I excel in leading embedded development projects, adept in code architecture and design, managing complex logics, and intricate state machines. My approach ensures robust and scalable embedded solutions from the ground up.</p>
+                <p>My forte includes working on <span class="bold main-color">IoT products</span>, motor control, and closed-loop systems. I am adept at developing smart, low-power systems incorporating sleep modes for optimal energy efficiency.</p>
+                <p>I thrive on creating field-independent products that maximize energy efficiency. Let's <span class="bold second-color">connect <i class='bx bx-chat'></i></span> and explore how we can drive technological innovation together.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- PORTFOLIO SECTION -->
     <!-- If applicable, showcase your firmware projects or any relevant work -->
