--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="navlist">
                 <li><a class="nav-menu-btn active" href="#home">Home</a></li>
                 <li><a class="nav-menu-btn" href="#about">About</a></li>
-                <li><a class="nav-menu-btn" href="#portfolio">Portfolio</a></li>
+                <!-- <li><a class="nav-menu-btn" href="#portfolio">Portfolio</a></li> -->
                 <li><a class="nav-menu-btn" href="#experience">Experience</a></li>
                 <li><a class="nav-menu-btn" href="#skills">Skills</a></li>
                 <li><a class="nav-menu-btn" href="#contact">Contact</a></li>
