--- a/index.html
+++ b/index.html
@@ -133,8 +133,6 @@
     <!-- ... -->
 
     <!-- EXPERIENCE SECTION -->
-    <!-- ======== EXPERIENCE SECTION ======== -->
-    <!-- ======== EXPERIENCE SECTION ======== -->
     <section class="qualification section" id="experience">
         <div class="container">
             <h2 class="section__title">Experience</h2>
@@ -147,6 +145,7 @@
                     <!-- Firmware Engineer -->
                     <div class="qualification__data">
                         <div>
+                            <img src="icons\companies\Phytech Logo.jpeg" alt="Phytech Logo" class="qualification__logo">
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
                                 Jun 2023 - Present
