--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                             <span class="qualification__line"></span>
                         </div>
                         <div>
+                            <img src="icons\companies\Tunity Logo.jpeg" alt="Tunity Logo" class="qualification__logo">
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
                                 Sep 2022 - May 2023
@@ -183,6 +184,7 @@
                     <!-- Embedded Software Engineer -->
                     <div class="qualification__data">
                         <div>
+                            <img src="icons\companies\kaufman_r_d_logo.jpeg" alt="Kaufman R&D Logo" class="qualification__logo">
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
                                 Dec 2021 - Sep 2022
@@ -204,6 +206,7 @@
                             <span class="qualification__line"></span>
                         </div>
                         <div>
+                            <img src="icons\companies\Liron enginnering logo.jpeg" alt="Liron Engineering R&D Logo" class="qualification__logo">
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
                                 Sep 2020 - Dec 2021
@@ -218,26 +221,10 @@
                         </div>
                     </div>
 
-                    <!-- Electronics & Embedded Engineering -->
-                    <div class="qualification__data">
-                        <div>
-                            <div class="qualification__calendar">
-                                <i class='bx bxs-calendar'></i>
-                                Sep 2020 - Dec 2021
-                            </div>
-                            <h3 class="qualification__title">Electronics & Embedded Engineer</h3>
-                            <span class="qualification__subtitle">Liron Engineering LTD.</span>
-                            <span class="qualification__location">Tel Aviv, Israel</span>
-                        </div>
-                        <div>
-                            <span class="qualification__rounder"></span>
-                            <span class="qualification__line"></span>
-                        </div>
-                    </div>
-
                     <!-- Computer Vision Engineer -->
                     <div class="qualification__data">
                         <div>
+                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo" class="qualification__logo">
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
                                 Aug 2019 - Sep 2020
