--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                             <h3 class="qualification__title">Embedded Software Engineer</h3>
                             <span class="qualification__subtitle">Kaufman R&D</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
-                            <img src="icons\companies\kaufman_r_d_logo.jpeg" alt="Kaufman R&D Logo" class="qualification__logo">
+                            <img src="icons\companies\kaufman_r_d_logo.jpeg" alt="Kaufman R&D Logo"
+                                class="qualification__logo">
                         </div>
                         <div>
                             <span class="qualification__rounder"></span>
@@ -213,7 +214,8 @@
                             <h3 class="qualification__title">Electronics & Embedded Engineer</h3>
                             <span class="qualification__subtitle">Liron Engineering LTD.</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
-                            <img src="icons\companies\Liron enginnering logo.jpeg" alt="Liron Engineering R&D Logo" class="qualification__logo">
+                            <img src="icons\companies\Liron enginnering logo.jpeg" alt="Liron Engineering R&D Logo"
+                                class="qualification__logo">
                         </div>
                         <div class="timeLine_container after_timeline">
                             <span class="qualification__rounder"></span>
@@ -235,7 +237,8 @@
                         <div>
                             <span class="qualification__rounder"></span>
                             <span class="qualification__line"></span>
-                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo" class="qualification__logo">
+                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo"
+                                class="qualification__logo">
                         </div>
                     </div>
 
@@ -245,8 +248,250 @@
     </section>
 
     <!-- SKILLS SECTION -->
-    <!-- List your technical skills relevant to Embedded Software and Firmware Engineering -->
-    <!-- ... -->
+    <section class="skills" id="skills">
+        <div class="container">
+
+            <div class="section__title">
+                Skills
+            </div>
+            <div class="section__subtitle">
+                My technical &amp; miscellaneous skills
+            </div>
+
+            <div class="skills__container grid">
+
+                <div>
+                    <div class="skills__content   skills__close">
+                        <div class="skills__header ">
+                            <span class="material-symbols-outlined skills__icon">visibility</span>
+                            <div>
+                                <h3 class="skills__title">Computer Vision</h3>
+                            </div>
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>Calibration Techniques</li>
+                                <li>Image Preprocessing</li>
+                                <li>Noise Reduction</li>
+                                <li>DSP filters</li>
+                                <li>Object Detection</li>
+                                <li>Image Segmentation</li>
+                                <li>Feature Extraction</li>
+                                <li>Pose Estimation</li>
+                                <li>Point Cloud Processing</li>
+                                <li>Stereo Vision</li>
+                                <li>VR/AR Development Platforms (e.g., Unity3D)</li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="bx bx-brain skills__icon"></i>
+
+                            <div>
+                                <h3 class="skills__title">Machine Learning and Deep Learning</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+
+                            <ul>
+                                <li>Data Preprocessing</li>
+                                <li>Model Training</li>
+                                <li>Hyperparameter Tuning</li>
+                                <li>Model Evaluation</li>
+                                <li>Convolutional Neural Networks (CNNs)</li>
+                                <li>Recurrent Neural Networks (RNNs)</li>
+                                <li>Transfer Learning</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <span class="material-symbols-outlined skills__icon">memory</span>
+                            <div>
+                                <h3 class="skills__title">Hardware</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>Cameras and Imaging Sensors</li>
+                                <li>LiDAR (e.g., Slamtec RPLIDAR)</li>
+                                <li>Depth Sensors (e.g., Realsense, Luxonis)</li>
+                                <li>Motors/Actuators Control</li>
+                                <li>GPIO Control</li>
+                                <li>Sensor Data Acquisition (e.g., IMU, Ultrasonic)</li>
+                                <li>Communication Protocols (e.g., IIC, SPI, PWM, UART)</li>
+                                <li>Microcontroller Programming (e.g., Arduino, Raspberry Pi)</li>
+                                <li>Oscilloscope / Spectrum analyzer / Logic analyzer</li>
+                                <li>Electronic Circuit Design (Analog/Digital with LTspice)</li>
+                                <li>PCB Design (e.g., EasyEDA, KiCAD)</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <span class="material-symbols-outlined skills__icon">precision_manufacturing</span>
+                            <div>
+                                <h3 class="skills__title">Robotics</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>SLAM (Simultaneous Localization and Mapping)</li>
+                                <li>Robot Operating System (ROS2)</li>
+                                <li>PID Control</li>
+                                <li>Kinematics and Dynamics</li>
+                                <li>Robot Perception</li>
+                                <li>Path Planning</li>
+                                <li>Robot Vision Integration</li>
+                                <li>Robot Hardware Integration (e.g., motor controllers, sensors)</li>
+                                <li>Robot Behavior Programming</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="bx bx-wrench skills__icon"></i>
+
+                            <div>
+                                <h3 class="skills__title">Software Development and Tools</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>Git and Version Control</li>
+                                <li>Linux/Unix Environments</li>
+                                <li>Virtual Environment(e.g., WSL, WMware)</li>
+                                <li>IDEs (e.g., Visual Studio Code, PyCharm)</li>
+                                <li>Debugging and Profiling</li>
+                                <li>Networking</li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <span class="material-symbols-outlined skills__icon">code</span>
+
+                            <div>
+                                <h3 class="skills__title">Programming Languages</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+
+                            <ul>
+                                <li>Python</li>
+                                <li>C/C++</li>
+                                <li>C#</li>
+                                <li>MATLAB</li>
+                                <li>JavaScript</li>
+                                <li>Assembly</li>
+                                <li>SQL</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <span class="material-symbols-outlined skills__icon">book_4</span>
+                            <div>
+                                <h3 class="skills__title">Main Libraries</h3>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>OpenCV</li>
+                                <li>Open3D</li>
+                                <li>TensorFlow</li>
+                                <li>Pandas</li>
+                                <li>Matplotlib</li>
+                                <li>Numpy</li>
+                                <li>TkInter</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <span class="material-symbols-outlined skills__icon">self_improvement</span>
+
+                            <div>
+                                <h3 class="skills__title">Soft Skills</h>
+                            </div>
+
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+
+                        <div class="skills__list grid">
+
+                            <ul>
+                                <li>Linear algebra / Statistics / Calculus</li>
+                                <li>Markdown</li>
+                                <li>Technical Writing / Documentation</li>
+                                <li>Presentation Skills</li>
+                                <li>Problem Solving</li>
+                                <li>Critical Thinking</li>
+                                <li>Communication</li>
+                                <li>Teamwork / Leadership</li>
+                                <li>Creativity</li>
+                                <li>Time Management</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="blog" id="blog">
+        <div class="container">
+            <div class="blog-header">
+                <div class="section__title">
+                    Blog
+                </div>
+                <div class="section__subtitle">
+                    this is my blog
+                </div>
+            </div>
+            <div class="blog-content">
+
+            </div>
+        </div>
+    </section>
 
     <!-- CONTACT SECTION -->
     <!-- Update contact information with your details -->
