import js files

--- a/index.html
+++ b/index.html
@@ -477,22 +477,6 @@
         </div>
     </section>
 
-    <section class="blog" id="blog">
-        <div class="container">
-            <div class="blog-header">
-                <div class="section__title">
-                    Blog
-                </div>
-                <div class="section__subtitle">
-                    this is my blog
-                </div>
-            </div>
-            <div class="blog-content">
-
-            </div>
-        </div>
-    </section>
-
     <!-- CONTACT SECTION -->
     <!-- Update contact information with your details -->
     <!-- ... -->
@@ -505,8 +489,9 @@
     <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
 
     <!-- Link to your JavaScript files -->
-    <!-- <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/solar_animation.js"></script> -->
+    <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/solar_animation.js"></script>
 </body>
 
 </html>
