--- a/index.html
+++ b/index.html
@@ -233,12 +233,11 @@
                             <h3 class="qualification__title">Computer Vision (student) Engineer</h3>
                             <span class="qualification__subtitle">ChameleonVISION</span>
                             <span class="qualification__location">Herzliya, Israel</span>
+                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo" class="qualification__logo">
                         </div>
                         <div>
                             <span class="qualification__rounder"></span>
                             <span class="qualification__line"></span>
-                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo"
-                                class="qualification__logo">
                         </div>
                     </div>
 
