--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 Jun 2023 - Present
                             </div>
                             <h3 class="qualification__title">Firmware Engineer</h3>
-                            <span class="qualification__subtitle">Phytech - Plant-Based Farming</span>
+                            <span class="qualification__subtitle">Phytech</span>
                             <span class="qualification__location">Kfar Sava, Israel</span>
                             <img src="icons\companies\Phytech Logo.jpeg" alt="Phytech Logo" class="qualification__logo">
                         </div>
