--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
                             <h3 class="qualification__title">Computer Vision (student) Engineer</h3>
                             <span class="qualification__subtitle">ChameleonVISION</span>
                             <span class="qualification__location">Herzliya, Israel</span>
-                            
-                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo" class="qualification__logo">
+
+                            <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo"
+                                class="qualification__logo">
                         </div>
                         <div>
                             <span class="qualification__rounder"></span>
@@ -482,18 +483,82 @@
     </section>
 
     <!-- CONTACT SECTION -->
-    <!-- Update contact information with your details -->
-    <!-- ... -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <h2 class="section__title">Contact Me</h2>
+            <div class="contact-content">
+                <div class="left-side">
+                    <div class="address details">
+                        <i class='bx bx-map'></i>
+                        <div class="topic">Address</div>
+                        <div class="text-one">Herzliya </div>
+                        <div class="text-two">Israel</div>
+                    </div>
+                    <div class="phone details">
+                        <i class='bx bxs-phone'></i>
+                        <div class="topic">Phone</div>
+                        <!-- <div class="text-one">+972XXXXXXXXX</div> -->
+                    </div>
+                    <div class="email details">
+                        <i class='bx bxs-envelope'></i>
+                        <div class="topic">Email</div>
+
+                        <div class="text-one"><a href="mailto:naveitayx@gmail.com">naveitayx@gmail.com</a></div>
+                    </div>
+                </div>
+
+                <div class="right-side">
+                    <div class="contact-icons">
+                        <a href="mailto:naveitayx@gmail.com"><i class='bx bxl-gmail'></i></a>
+                        <a href="https://github.com/NaveItay" target="_blank"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.linkedin.com/in/inave/" target="_blank"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.facebook.com/inave/" target="_blank"><i
+                                class='bx bxl-facebook'></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    </div>
+                    <div class="topic-text">Send me a message to
+                        <a href="">naveitayx@gmail.com</a>
+                    </div>
+                    <p>If you have any projects or inquiries related to my expertise,
+                        feel free to send me a message here.
+                        I'm here to assist you and eager to collaborate</p>
+                    <form name="contact-form" target="_blank" action="https://formspree.io/f/xwkdjvry" method="POST">
+                        <label>
+                            <div class="input-box">
+                                <input type="text" placeholder="Enter your name" />
+                            </div>
+                        </label>
+                        <label>
+                            <div class="input-box">
+                                <input type="email" name="email" placeholder="Enter your email" />
+                            </div>
+                        </label>
+                        <label>
+                            <div class="input-box message-box">
+                                <textarea name="message" placeholder="Enter your message"></textarea>
+                            </div>
+                        </label>
+                        <div class="button">
+                            <input type="submit" value="Send Now" onclick="submitForm()" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer with social media icons -->
     <!-- Update the links to point to your social media profiles -->
     <!-- ... -->
 
-    <!-- Import Typed.js for typing effect if you want to use it -->
-    <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
+    <a href="#" class="scrollup" id="scroll-top">
+        <i class='bx bx-arrow-to-top scrollup__icon'></i>
+    </a>
 
     <!-- Link to your JavaScript files -->
-    <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
+    <!-- Import Typed.js for typing effect if you want to use it -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/solar_animation.js"></script>
 </body>
