--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <h3 class="qualification__title">Firmware Engineer</h3>
                             <span class="qualification__subtitle">Phytech</span>
                             <span class="qualification__location">Kfar Sava, Israel</span>
-
+                            <br> <!-- Line break here -->
                             <img src="icons\companies\Phytech Logo.jpeg" alt="Phytech Logo" class="qualification__logo">
                         </div>
                         <div>
@@ -175,7 +175,7 @@
                             <h3 class="qualification__title">Software Engineer</h3>
                             <span class="qualification__subtitle">Tunity | an iSpot Company</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
-
+                            <br> <!-- Line break here -->
                             <img src="icons\companies\Tunity Logo.jpeg" alt="Tunity Logo" class="qualification__logo">
                         </div>
                         <div class="timeLine_container after_timeline">
@@ -193,7 +193,7 @@
                             <h3 class="qualification__title">Embedded Software Engineer</h3>
                             <span class="qualification__subtitle">Kaufman R&D</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
-
+                            <br> <!-- Line break here -->
                             <img src="icons\companies\kaufman_r_d_logo.jpeg" alt="Kaufman R&D Logo"
                                 class="qualification__logo">
                         </div>
@@ -217,7 +217,7 @@
                             <h3 class="qualification__title">Electronics & Embedded Engineer</h3>
                             <span class="qualification__subtitle">Liron Engineering LTD.</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
-
+                            <br> <!-- Line break here -->
                             <img src="icons\companies\Liron enginnering logo.jpeg" alt="Liron Engineering R&D Logo"
                                 class="qualification__logo">
                         </div>
@@ -237,7 +237,7 @@
                             <h3 class="qualification__title">Computer Vision (student) Engineer</h3>
                             <span class="qualification__subtitle">ChameleonVISION</span>
                             <span class="qualification__location">Herzliya, Israel</span>
-
+                            <br> <!-- Line break here -->
                             <img src="icons\companies\ChameeonVISION Logo.jpeg" alt="ChameeonVISION Logo"
                                 class="qualification__logo">
                         </div>
