--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="qualification section" id="experience">
         <div class="container">
             <h2 class="section__title">Experience</h2>
-            <div class="section__subtitle">My professional journey in embedded systems</div>
+            <div class="section__subtitle">My professional journey</div>
 
             <!-- Professional Tab Content -->
             <div class="qualification__sections">
