--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         </div>
     </section>
 
+    <div></div>
+
     <!-- ======== ABOUT SECTION ======== -->
     <section class="about" id="about">
         <div class="container">
@@ -141,6 +143,8 @@
     <!-- PORTFOLIO SECTION -->
     <!-- If applicable, showcase your firmware projects or any relevant work -->
     <!-- ... -->
+
+    <div></div>
 
     <!-- EXPERIENCE SECTION -->
     <section class="qualification section" id="experience">
@@ -261,6 +265,8 @@
             </div>
         </div>
     </section>
+
+    <div></div>
 
     <!-- SKILLS SECTION -->
     <section class="skills" id="skills">
@@ -491,6 +497,8 @@
             </div>
         </div>
     </section>
+
+    <div></div>
 
     <!-- CONTACT SECTION -->
     <section class="contact" id="contact">
