--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/solar_animation.js"></script>
+    <script type="text/javascript" src="js/blob.js"></script>
 </body>
 
 </html>
