--- a/index.html
+++ b/index.html
@@ -113,17 +113,53 @@
             <h2 class="section__title">About</h2>
             <div class="container-upper">
                 <div class="container-left">
+
                     <!-- SVG with the goo effect filter -->
-                    <svg width="100%" height="100%" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        viewBox="0 0 800 800" id="loader">
                         <defs>
+                            <clipPath id="clipPath4">
+                                <circle class="blob" cx="350" cy="170" r="150"
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
+                                <circle class="blob" cx="400" cy="480" r="280"
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
+                                <circle class="blob" cx="600" cy="230" r="35"
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
+                                <circle class="blob" cx="150" cy="620" r="105"
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
+                                <circle class="blob" cx="650" cy="680" r="15"
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
+                            </clipPath>
                             <filter id="goo">
-                                <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-                                <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                                <feBlend in="SourceGraphic" in2="goo" />
+                                <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+                                <feColorMatrix in="blur" mode="matrix"
+                                    values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+                                <feBlend in2="goo" in="SourceGraphic" result="mix" />
                             </filter>
+                            <pattern id="Pattern" x="0" y="0" width="0.25" height="0.25">
+                                <image xlink:href="img/noise.png"></image>
+                            </pattern>
                         </defs>
-                        <image xlink:href="img/about.png" width="100%" height="100%" filter="url(#goo)" />
+
+
+                        <!-- Apply the clipPath to this group -->
+                        <g class="blobs-filter">
+                            <g clip-path="url(#clipPath4)">
+                                <rect id="rect-background" width="800" height="900" />
+                                <rect fill="url(#Pattern)" width="800" height="900" />
+                                <image class="portrait2 blob" x="-2%" y="-38%" width=100% xlink:href="img/about.png"
+                                    transform="rotate(0) translate(0, 0) rotate(0)"></image>
+                                <image class="portrait" x="0%" y="-40%" width=100% xlink:href="img/about.png">
+                                </image>
+                            </g>
+                        </g>
+
+                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-40%" width=100%
+                            xlink:href="img/about.png">
+                        </image>
                     </svg>
+
+
                 </div>
                 <div class="container-right">
                     <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
@@ -534,10 +570,8 @@
                     <div class="contact-icons">
                         <a href="mailto:naveitayx@gmail.com"><i class='bx bxl-gmail'></i></a>
                         <a href="https://github.com/NaveItay" target="_blank"><i class='bx bxl-github'></i></a>
-                        <a href="https://www.linkedin.com/in/inave/" target="_blank"><i
-                                class='bx bxl-linkedin'></i></a>
-                        <a href="https://www.facebook.com/inave/" target="_blank"><i
-                                class='bx bxl-facebook'></i></a>
+                        <a href="https://www.linkedin.com/in/inave/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.facebook.com/inave/" target="_blank"><i class='bx bxl-facebook'></i></a>
                         <a href="https://twitter.com/" target="_blank"><i class='bx bxl-twitter'></i></a>
                     </div>
                     <div class="topic-text">Send me a message to
