--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 
                     <!-- SVG with the goo effect filter -->
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    viewBox="0 0 800 800" id="loader">
+                    viewBox="0 0 800 800" id="loader" style="background-color: #0000ff;">
                     <defs>
                         <clipPath id="clipPath4">
                             <!-- Define the shapes that will clip your content -->
-                            <circle class="blob" cx="350" cy="170" r="150" />
+                            <circle class="blob" cx="550" cy="170" r="150" />
                             <circle class="blob" cx="400" cy="480" r="280" />
                             <circle class="blob" cx="600" cy="230" r="35" />
                             <circle class="blob" cx="150" cy="620" r="105" />
