--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                     <!-- SVG with the goo effect filter -->
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    viewBox="0 0 800 800" id="loader" style="background-color: #0000ff;">
+                    viewBox="0 0 800 800" id="loader">
                     <defs>
                         <clipPath id="clipPath4">
                             <!-- Define the shapes that will clip your content -->
@@ -135,7 +135,7 @@
                     </defs>
                 
                     <!-- Apply the clipPath and goo effect filter to the image -->
-                    <image xlink:href="img/about.png" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />
+                    <image xlink:href="img\about_background.jpg" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />
                 </svg>                
 
                 </div>
