--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </defs>
                 
                     <!-- Apply the clipPath and goo effect filter to the image -->
-                    <image xlink:href="img\about_background.jpg" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />
+                    <image xlink:href="img\about-full.png" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />
                 </svg>                
 
                 </div>
