--- a/index.html
+++ b/index.html
@@ -116,27 +116,28 @@
 
                     <!-- SVG with the goo effect filter -->
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    viewBox="0 0 800 800" id="loader">
-                    <defs>
-                        <clipPath id="clipPath4">
-                            <!-- Define the shapes that will clip your content -->
-                            <circle class="blob" cx="550" cy="170" r="150" />
-                            <circle class="blob" cx="400" cy="480" r="280" />
-                            <circle class="blob" cx="600" cy="230" r="35" />
-                            <circle class="blob" cx="150" cy="620" r="105" />
-                            <circle class="blob" cx="650" cy="680" r="15" />
-                        </clipPath>
-                        <filter id="goo">
-                            <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-                            <feColorMatrix in="blur" mode="matrix"
-                                values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                            <feBlend in="SourceGraphic" in2="goo" result="mix" />
-                        </filter>
-                    </defs>
-                
-                    <!-- Apply the clipPath and goo effect filter to the image -->
-                    <image xlink:href="img\about-full.png" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />
-                </svg>                
+                        viewBox="0 0 800 800" id="loader">
+                        <defs>
+                            <clipPath id="clipPath4">
+                                <!-- Define the shapes that will clip your content -->
+                                <circle class="blob" cx="550" cy="170" r="150" />
+                                <circle class="blob" cx="400" cy="480" r="280" />
+                                <circle class="blob" cx="600" cy="230" r="35" />
+                                <circle class="blob" cx="150" cy="620" r="105" />
+                                <circle class="blob" cx="650" cy="680" r="15" />
+                            </clipPath>
+                            <filter id="goo">
+                                <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+                                <feColorMatrix in="blur" mode="matrix"
+                                    values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+                                <feBlend in="SourceGraphic" in2="goo" result="mix" />
+                            </filter>
+                        </defs>
+
+                        <!-- Apply the clipPath and goo effect filter to the image -->
+                        <image xlink:href="img\about-full.png" width="800" height="800" clip-path="url(#clipPath4)"
+                            filter="url(#goo)" />
+                    </svg>
 
                 </div>
                 <div class="container-right">
@@ -598,7 +599,8 @@
     <script type="text/javascript" src="js/solar_animation.js"></script>
 
     <!-- Include the GSAP library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script> -->
+    <script type="text/javascript" src="js\TweenMax.min.js"></script>
     <script type="text/javascript" src="js/blob.js"></script>
 </body>
 
