updata javascript files

--- a/index.html
+++ b/index.html
@@ -592,15 +592,15 @@
         <i class='bx bx-arrow-to-top scrollup__icon'></i>
     </a>
 
-    <!-- Link to your JavaScript files -->
-    <!-- Import Typed.js for typing effect if you want to use it -->
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- import -->
+    <script type="text/javascript" src="js\typed.umd.js"></script>
+    <script type="text/javascript" src="js/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/solar_animation.js"></script>
+    <script type="text/javascript" src="js/navigation_script.js"></script>
 
-    <!-- Include the GSAP library -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script> -->
-    <script type="text/javascript" src="js\TweenMax.min.js"></script>
+    <!-- Animations -->
+    <script type="text/javascript" src="js/solar_animation.js"></script>
+    <script type="text/javascript" src="js/typing_animation.js"></script>
     <script type="text/javascript" src="js/blob.js"></script>
 </body>
 
