--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
     </a>
 
     <!-- import -->
-    <script type="text/javascript" src="js\typed.umd.js"></script>
+    <script type="text/javascript" src="js/typed.umd.js"></script>
     <script type="text/javascript" src="js/TweenMax.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/navigation_script.js"></script>
