--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="container-left">
                         <div class="home-content">
                             <h2>Hi there!</h2>
-                            <div id="intro-text">I Am a <span class="typing-text">Embedded Software</span><br>Engineer.
+                            <div id="intro-text">I Am a <span class="typing-text">Embedded</span><br>Engineer.
                             </div>
                             <div class="text">
 
