--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <defs>
                         <clipPath id="clipPath4">
                             <!-- Define the shapes that will clip your content -->
-                            <circle class="blob" cx="550" cy="170" r="150" fill=#0000ff/>
+                            <circle class="blob" cx="550" cy="170" r="150" fill="#0000ff"/>
                             <circle class="blob" cx="400" cy="480" r="280" fill=#0000ff/>
                             <circle class="blob" cx="600" cy="230" r="35" fill=#0000ff/>
                             <circle class="blob" cx="150" cy="620" r="105" fill=#0000ff/>
@@ -137,7 +137,7 @@
                     </defs>
                 
                     <!-- Apply the clipPath and goo effect filter to the image (width = 1400) -->
-                    <image xlink:href="img\about.png" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />   
+                    <image xlink:href="img\about-full.png" width="800" height="800" clip-path="url(#clipPath4)" filter="url(#goo)" />   
                 </svg>
                 
 
