--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             </g>
                         </g>
 
-                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width=100%
+                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width=100% height="80%"
                             xlink:href="img/about.png"></image>
                     </svg>
                 
